2013-04-02 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add classes for categories filter with subcategories
	* Reorganize typoscript
	
2013-03-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* First version stable
	* Initial import

2013-03-12  Plan.Net France  <typo3@plan-net.fr>

	* Initial code generated with kickstarter